Added uuid to logging